--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><link rel="stylesheet" href="/css/bootstrap.css"><title>vue_test</title><script defer="defer" type="module" src="/js/chunk-vendors.2b74db6d.js"></script><script defer="defer" type="module" src="/js/app.36495730.js"></script><script defer="defer" src="/js/chunk-vendors-legacy.9aacdbce.js" nomodule></script><script defer="defer" src="/js/app-legacy.db6765fc.js" nomodule></script></head><body><noscript><strong>We're sorry but vue_test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html>
+<html lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <title>vue_test</title>
+  <script defer="defer" type="module" src="/js/chunk-vendors.2b74db6d.js"></script>
+  <script defer="defer" type="module" src="/js/app.25aebdea.js"></script>
+  <script defer="defer" src="/js/chunk-vendors-legacy.9aacdbce.js" nomodule></script>
+  <script defer="defer" src="/js/app-legacy.fd173823.js" nomodule></script>
+</head>
+
+<body><noscript><strong>We're sorry but vue_test doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong></noscript>
+  <div id="app"></div>
+</body>
+
+</html>
